<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    >
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/white_fillet_background">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/subscription_paytodetail"
                android:textSize="18sp"
                />
        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/leave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/subscription_paytodetail_leave"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@color/grey"
                android:alpha="0.5"/>
            <TextView
                android:id="@+id/go"
                android:layout_alignParentRight="true"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:textColor="@color/main_color"
                android:gravity="center"
                android:text="@string/subscription_paytodetail_go"
                android:textSize="18sp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>