<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_back"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/main_color"
        android:orientation="horizontal" >
        <RelativeLayout
            android:id="@+id/card_title_left"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
        <ImageView
            android:layout_width="8dp"
            android:layout_height="16dp"
            android:layout_centerInParent="true"
            android:src="@drawable/btn_goback" />
        </RelativeLayout>
        <TextView
            android:id="@+id/card_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/id_card"
            android:textColor="@color/top_font_color"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/card_title_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_right"
            android:textColor="@color/top_font_color"
            android:textSize="15sp"
            android:paddingRight="15dp"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <View
                style="@style/Divider"
                android:layout_marginTop="15dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                >
                <EditText
                    android:id="@+id/my_card_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:background="@null"
                    android:hint="@string/my_text24"
                    android:maxLength="18"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:gravity="left"
                     />
                <RelativeLayout
                    android:id="@+id/my_card_delect"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="15dp"
                    >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/delete"/>
                </RelativeLayout>
            </LinearLayout>
            <View style="@style/Divider" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>